Fixed the slider so it is autoplaying in javascript, fixed the related product so it fits on smaller screens nice and smooth. Mohamed and i tried to fix gutter-sizer, but we didn’t succeed with that today, we will find a way to make it work.

--- a/wp-content/themes/woo-base/sass/_globals.scss
+++ b/wp-content/themes/woo-base/sass/_globals.scss
@@ -464,3 +464,9 @@ ul .page-numbers {
   border: 1px solid;
   border-radius: 4px;
 }
+
+#woocommerce_products-2 {
+  .gutter-sizer {
+    width: 3%;
+  }
+}
